feat: update to spring boot 3